--- a/references.bib
+++ b/references.bib
@@ -473,20 +473,6 @@
 	url = {http://dx.doi.org/10.1101/2024.06.06.597716}
 }
 
-@article{abramson2024a,
-	title = {Accurate structure prediction of biomolecular interactions with AlphaFold 3},
-	author = {Abramson, Josh and Adler, Jonas and Dunger, Jack and Evans, Richard and Green, Tim and Pritzel, Alexander and Ronneberger, Olaf and Willmore, Lindsay and Ballard, Andrew J. and Bambrick, Joshua and Bodenstein, Sebastian W. and Evans, David A. and Hung, Chia-Chun and {O{\textquoteright}Neill}, Michael and Reiman, David and Tunyasuvunakool, Kathryn and Wu, Zachary and {{\v{Z}}emgulyt{\.{e}}}, {Akvil{\.{e}}} and Arvaniti, Eirini and Beattie, Charles and Bertolli, Ottavia and Bridgland, Alex and Cherepanov, Alexey and Congreve, Miles and Cowen-Rivers, Alexander I. and Cowie, Andrew and Figurnov, Michael and Fuchs, Fabian B. and Gladman, Hannah and Jain, Rishub and Khan, Yousuf A. and Low, Caroline M. R. and Perlin, Kuba and Potapenko, Anna and Savy, Pascal and Singh, Sukhdeep and Stecula, Adrian and Thillaisundaram, Ashok and Tong, Catherine and Yakneen, Sergei and Zhong, Ellen D. and Zielinski, Michal and {{\v{Z}}ídek}, Augustin and Bapst, Victor and Kohli, Pushmeet and Jaderberg, Max and Hassabis, Demis and Jumper, John M.},
-	year = {2024},
-	month = {05},
-	date = {2024-05-08},
-	journal = {Nature},
-	pages = {493--500},
-	volume = {630},
-	number = {8016},
-	doi = {10.1038/s41586-024-07487-w},
-	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
-	langid = {en}
-}
 
 @article{2024,
 	title = {AlphaFold3 {\textemdash} why did Nature publish it without its code?},
@@ -499,21 +485,6 @@
 	number = {8013},
 	doi = {10.1038/d41586-024-01463-0},
 	url = {http://dx.doi.org/10.1038/d41586-024-01463-0},
-	langid = {en}
-}
-
-@article{abramson2024b,
-	title = {Accurate structure prediction of biomolecular interactions with AlphaFold 3},
-	author = {Abramson, Josh and Adler, Jonas and Dunger, Jack and Evans, Richard and Green, Tim and Pritzel, Alexander and Ronneberger, Olaf and Willmore, Lindsay and Ballard, Andrew J. and Bambrick, Joshua and Bodenstein, Sebastian W. and Evans, David A. and Hung, Chia-Chun and {O{\textquoteright}Neill}, Michael and Reiman, David and Tunyasuvunakool, Kathryn and Wu, Zachary and {{\v{Z}}emgulyt{\.{e}}}, {Akvil{\.{e}}} and Arvaniti, Eirini and Beattie, Charles and Bertolli, Ottavia and Bridgland, Alex and Cherepanov, Alexey and Congreve, Miles and Cowen-Rivers, Alexander I. and Cowie, Andrew and Figurnov, Michael and Fuchs, Fabian B. and Gladman, Hannah and Jain, Rishub and Khan, Yousuf A. and Low, Caroline M. R. and Perlin, Kuba and Potapenko, Anna and Savy, Pascal and Singh, Sukhdeep and Stecula, Adrian and Thillaisundaram, Ashok and Tong, Catherine and Yakneen, Sergei and Zhong, Ellen D. and Zielinski, Michal and {{\v{Z}}ídek}, Augustin and Bapst, Victor and Kohli, Pushmeet and Jaderberg, Max and Hassabis, Demis and Jumper, John M.},
-	year = {2024},
-	month = {05},
-	date = {2024-05-08},
-	journal = {Nature},
-	pages = {493--500},
-	volume = {630},
-	number = {8016},
-	doi = {10.1038/s41586-024-07487-w},
-	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
 	langid = {en}
 }
 
@@ -572,4 +543,66 @@
 	date = {2024},
 	doi = {10.48550/ARXIV.2405.15840},
 	url = {https://arxiv.org/abs/2405.15840}
+}
+
+@article{dalla-torre2024a,
+	title = {Nucleotide Transformer: building and evaluating robust foundation models for human genomics},
+	author = {Dalla-Torre, Hugo and Gonzalez, Liam and Mendoza-Revilla, Javier and Lopez Carranza, Nicolas and Grzywaczewski, Adam Henryk and Oteri, Francesco and Dallago, Christian and Trop, Evan and de Almeida, Bernardo P. and Sirelkhatim, Hassan and Richard, Guillaume and Skwark, Marcin and Beguir, Karim and Lopez, Marie and Pierrot, Thomas},
+	year = {2024},
+	month = {11},
+	date = {2024-11-28},
+	journal = {Nature Methods},
+	pages = {287--297},
+	volume = {22},
+	number = {2},
+	doi = {10.1038/s41592-024-02523-z},
+	url = {http://dx.doi.org/10.1038/s41592-024-02523-z},
+	langid = {en}
+}
+
+@article{hu2021,
+	title = {LoRA: Low-Rank Adaptation of Large Language Models},
+	author = {Hu, Edward J. and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
+	year = {2021},
+	date = {2021},
+	doi = {10.48550/ARXIV.2106.09685},
+	url = {https://arxiv.org/abs/2106.09685}
+}
+
+@article{biderman2024,
+	title = {LoRA Learns Less and Forgets Less},
+	author = {Biderman, Dan and Portes, Jacob and Ortiz, Jose Javier Gonzalez and Paul, Mansheej and Greengard, Philip and Jennings, Connor and King, Daniel and Havens, Sam and Chiley, Vitaliy and Frankle, Jonathan and Blakeney, Cody and Cunningham, John P.},
+	year = {2024},
+	date = {2024},
+	doi = {10.48550/ARXIV.2405.09673},
+	url = {https://arxiv.org/abs/2405.09673}
+}
+
+@article{watson2023,
+	title = {De novo design of protein structure and function with RFdiffusion},
+	author = {Watson, Joseph L. and Juergens, David and Bennett, Nathaniel R. and Trippe, Brian L. and Yim, Jason and Eisenach, Helen E. and Ahern, Woody and Borst, Andrew J. and Ragotte, Robert J. and Milles, Lukas F. and Wicky, Basile I. M. and Hanikel, Nikita and Pellock, Samuel J. and Courbet, Alexis and Sheffler, William and Wang, Jue and Venkatesh, Preetham and Sappington, Isaac and Torres, {Susana Vázquez} and Lauko, Anna and De Bortoli, Valentin and Mathieu, Emile and Ovchinnikov, Sergey and Barzilay, Regina and Jaakkola, Tommi S. and DiMaio, Frank and Baek, Minkyung and Baker, David},
+	year = {2023},
+	month = {07},
+	date = {2023-07-11},
+	journal = {Nature},
+	pages = {1089--1100},
+	volume = {620},
+	number = {7976},
+	doi = {10.1038/s41586-023-06415-8},
+	url = {http://dx.doi.org/10.1038/s41586-023-06415-8},
+	langid = {en}
+}
+
+@article{soleymani2024,
+	title = {Structure-based protein and small molecule generation using EGNN and diffusion models: A comprehensive review},
+	author = {Soleymani, Farzan and Paquet, Eric and Viktor, Herna Lydia and Michalowski, Wojtek},
+	year = {2024},
+	month = {12},
+	date = {2024-12},
+	journal = {Computational and Structural Biotechnology Journal},
+	pages = {2779--2797},
+	volume = {23},
+	doi = {10.1016/j.csbj.2024.06.021},
+	url = {http://dx.doi.org/10.1016/j.csbj.2024.06.021},
+	langid = {en}
 }
