--- a/Chapter5_DNA.qmd
+++ b/Chapter5_DNA.qmd
@@ -1,7 +1,4 @@
----
-title: "Weaving Together Models"
-format: html
----
+# Comparing Models {#sec-DNAeval2}
 
 ::: callout-tip
 ## Abstract
@@ -24,7 +21,7 @@ Below is a minimal code example where we 1. load the two models and write a help
 
 The important skill we learn here is to load two models, both trained on slightly different datasets, with slightly different DNA tokenizers, and apply them both to a single dataset, so we can make a direct comparison.
 
-```python
+``` python
 # --------------------------------
 # 1. Competative evaluations!!
 # --------------------------------
@@ -93,9 +90,9 @@ def get_predictions(pos, input_ids_gpn, attention_mask_gpn, aux_features,
 
 ## Evaluating Model accuracy (results)
 
-When evaluating up to 500 bases (first 500) for the first 30 genes, and all bases where the human base doesn't match the most frequently observed ancestral base across 100 species we can generate model accuracy stats. Here we use the mean # bases correctly called by the model (where called means the model assigns the true human references base the highest probability when predicting it.). As expected the GPN based Bert model we trained, which has access to the evolutionary history of the base, blows vanilla DNA Bert out of the water. This isn't unexpected though, very large portions of the coding sequences are conserved across species, and training on human species and 12 aligned species, where those other species are available at inference time just makes prediction VERY easy. However as per our first hypothesis the GPN model doesn't do well if we mask the bases evolutionary history. In those cases, it's bested by DNA Bert, which is trained to predict sequences without explicit evolutionary history and so does a reasonable job at it.
+When evaluating up to 500 bases (first 500) for the first 30 genes, and all bases where the human base doesn't match the most frequently observed ancestral base across 100 species we can generate model accuracy stats. Here we use the mean \# bases correctly called by the model (where called means the model assigns the true human references base the highest probability when predicting it.). As expected the GPN based Bert model we trained, which has access to the evolutionary history of the base, blows vanilla DNA Bert out of the water. This isn't unexpected though, very large portions of the coding sequences are conserved across species, and training on human species and 12 aligned species, where those other species are available at inference time just makes prediction VERY easy. However as per our first hypothesis the GPN model doesn't do well if we mask the bases evolutionary history. In those cases, it's bested by DNA Bert, which is trained to predict sequences without explicit evolutionary history and so does a reasonable job at it.
 
-```python
+``` python
 # 1. Overall Accuracy Bar Plot
 plt.figure(figsize=(10, 6))
 accuracies = {
@@ -113,15 +110,15 @@ plt.tight_layout()
 plt.show()
 ```
 
-![**Figure 1**: Model prediction accuracy compared across a common set of coding sequences of 30 genes (up to ±15k bases). GPN (no species) are predictions by the GPN model but with other species base masked (changed to "-" , the missing/sequences gap token) during prediction. ](images/paste-20.png)
+![**Figure 1**: Model prediction accuracy compared across a common set of coding sequences of 30 genes (up to ±15k bases). GPN (no species) are predictions by the GPN model but with other species base masked (changed to "-" , the missing/sequences gap token) during prediction.](images/paste-20.png)
 
-I had expected that if considering bases where the human references base differs from the majority of the other species bases, and the base is highly conserved (> 75%) then GPN models might be thrown off, and perhaps DNA Bert would not? It appears though (See **Figure 2**) that all models drop in accuracy, but DNA Bert drops more than the GPN model! So our second hypothesis wasn't confirmed. Now this is a textbook-like document, these models are under-trained, we only evaluated the first 500 bases in 30 genes, within them there are only a few hundred bases where the human and dominant ancestral base differ, so please don't generalize any of these conclusions!
+I had expected that if considering bases where the human references base differs from the majority of the other species bases, and the base is highly conserved (\> 75%) then GPN models might be thrown off, and perhaps DNA Bert would not? It appears though (See **Figure 2**) that all models drop in accuracy, but DNA Bert drops more than the GPN model! So our second hypothesis wasn't confirmed. Now this is a textbook-like document, these models are under-trained, we only evaluated the first 500 bases in 30 genes, within them there are only a few hundred bases where the human and dominant ancestral base differ, so please don't generalize any of these conclusions!
 
 ![**Figure 2:** The model prediction accuracy for bases where the human base differs from the base most frequently observed in other species.](images/paste-21.png)
 
 Finally, we can plot model accuracy as a function of "conservation score" which is an ad-hoc measure of the % of valid bases (so A, T, C, G) across species that is the dominant most frequent) base. You could argue a more comprehensive conservation score might account for the number of species where the part of the sequences could not be aligned (e.g. the percentage of "-" bases), and that might be a great exercise for you!
 
-```python
+``` python
 # 4. Conservation Score vs Accuracy
 plt.figure(figsize=(12, 6))
 conservation_bins = np.linspace(0, 1, 11)
@@ -147,29 +144,23 @@ plt.show()
 
 Our comparative analysis of the GPN-BERT and DNABERT models reveals several key insights:
 
-1. **Base Prediction Performance**:
-   - GPN-BERT with evolutionary context significantly outperforms DNABERT in standard conditions
-   - When evolutionary information is masked, GPN-BERT's performance drops below DNABERT
-   - Both models show reduced accuracy when predicting bases that differ from the ancestral consensus
-
-2. **Conservation Score Impact**:
-   - Higher conservation scores correlate with better prediction accuracy across all models
-   - The relationship between conservation and accuracy appears to be non-linear
-   - GPN-BERT maintains a performance advantage even at lower conservation levels
-
-3. **Model Architecture Trade-offs**:
-   - GPN-BERT's superior performance comes at the cost of requiring cross-species alignment data
-   - DNABERT shows more robust performance when evolutionary context is unavailable
-   - The results suggest potential benefits in combining both approaches
+1.  **Base Prediction Performance**:
+    -   GPN-BERT with evolutionary context significantly outperforms DNABERT in standard conditions
+    -   When evolutionary information is masked, GPN-BERT's performance drops below DNABERT
+    -   Both models show reduced accuracy when predicting bases that differ from the ancestral consensus
+2.  **Conservation Score Impact**:
+    -   Higher conservation scores correlate with better prediction accuracy across all models
+    -   The relationship between conservation and accuracy appears to be non-linear
+    -   GPN-BERT maintains a performance advantage even at lower conservation levels
+3.  **Model Architecture Trade-offs**:
+    -   GPN-BERT's superior performance comes at the cost of requiring cross-species alignment data
+    -   DNABERT shows more robust performance when evolutionary context is unavailable
+    -   The results suggest potential benefits in combining both approaches
 
 These findings align with our project's focus on comparing these two DNA language models, particularly in their ability to handle positions where human sequences differ from ancestral sequences. The analysis of prediction ranks and base-by-base accuracy provides valuable insights into each model's strengths and limitations.
 
 ## Next Steps
 
-In the upcoming chapters, we will:
-1. Explore hybrid architectures that combine the strengths of both models
-2. Evaluate performance on specific mutation types
-3. Investigate the relationship between conservation patterns and prediction accuracy
-4. Consider practical applications in genomic research and clinical settings
+In the upcoming chapters, we will: 1. Explore hybrid architectures that combine the strengths of both models 2. Evaluate performance on specific mutation types 3. Investigate the relationship between conservation patterns and prediction accuracy 4. Consider practical applications in genomic research and clinical settings
 
 The code and detailed analysis for all experiments are available in the project repository, allowing for reproduction and extension of these results.
