--- a/Preamble1.qmd
+++ b/Preamble1.qmd
@@ -1,6 +1,6 @@
 # What is this Book About? {.unnumbered}
 
-This book is me trying to keep up with the current state of the art in ML for biology, with an initial focus on language models, tohugh more acurately all models we discuss are "attention" models. The fundemental goal of these models is to learn the dependencies (the joint probability distribution) between elements in a sequence (a DNA or protein sequences) or a 2d field (an image or a protein contact map) or 3d structure (the full protein structure for example).
+This book is me trying to keep up with the current state of the art in ML for biology, with an initial focus on language models, tohugh more acurately all models we discuss are "attention" models. The fundemental goal of these models is to learn the dependencies (the joint probability distribution) between elements in a sequence (a DNA or protein sequences) or a 2D field (an image or a protein contact map) or 3D structure (the full protein structure for example).
 
 When studying the latest hyped tools, it's good to resist the temptation to be awed by the models. Some are great, and it can feel magical to see an unsupervised model pick up important biological signals and be very predictive by only processing sequence data! However, the current state of the art in biology, genetics especially, is remarkable—we know a lot about the genome, about how DNA is transcribed into RNA and then proteins, which proteins are conserved across evolution (i.e., essential for all life). So throughout, we have to keep in mind that in some domains, while it may feel (and actually be) remarkable that a language model picks up fundamental biology just from processing data, it might not be state of the art or even close to it.
 
